--- a/client/styles.css
+++ b/client/styles.css
@@ -20,6 +20,58 @@
   padding: 16px;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.brands {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  float: left;
+  padding: 5px;
+}
+
+.ig {
+  width: 300px;
+  height: 300px;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.overlay:hover {
+  opacity: 1;
+}
+
+.caption {
+  font-size: 1.25em;
+}
+
+.handle {
+  margin-top: 0.25em;
+}
+
+.description {
+  font-size: 0.75em;
+  margin-top: 0.1em;
+}
+
+
 /* .sticky {
     position: fixed;
     top: 0;
@@ -29,6 +81,31 @@
 .sticky + .content {
     padding-top: 60px; */
 /* } */
+
+/* =============code below works for darkening photo squares ==========
+
+/* a.brands {
+  -webkit-filter: brightness(100%);
+}
+
+a.brands:hover {
+  -webkit-filter: brightness(60%);
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
+} 
+
+========================================== */
+
+/* ======= code below testing overlay w/caption ==== */
+
+
+
+
+
+/* ================================ */
 
 .newsletter {
   float: left;
