--- a/client/styles.css
+++ b/client/styles.css
@@ -1,10 +1,13 @@
 * {
   font-family: "Courier New", Courier, monospace;
+  text-align: center;
 }
 
 #navbar {
   overflow: hidden;
   background-color: white;
+  display: flex;
+  justify-content: center;
 }
 
 #navbar a {
@@ -19,6 +22,16 @@
 .content {
   padding: 16px;
 }
+
+/* .sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+} */
 
 ul {
   list-style-type: none;
@@ -71,17 +84,6 @@ ul {
   margin-top: 0.1em;
 }
 
-
-/* .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-.sticky + .content {
-    padding-top: 60px; */
-/* } */
-
 /* =============code below works for darkening photo squares ==========
 
 /* a.brands {
@@ -113,6 +115,6 @@ a.brands:hover {
 }
 
 #front {
-  float: left;
-  width: 1000px;
+  float: center;
+  width: 900px;
 }
